website finally starting to look presentable

--- a/website/GeoBeacon/index.html
+++ b/website/GeoBeacon/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
 <div class="wrapper">
 
   <main>
@@ -31,6 +30,9 @@
       <section class="module content">
         <div class="container">
           <h2>Never Get Stranded Again</h2>
+          <img class="center-image" alt="Navigate the main page of GeoBeacon."
+              src="img/wireframe/main_activity_on_htcone.png" />
+          <div class="spacer-l"></div>
           <p>GeoBeacon enables quick and simple location sharing.</p>
           <p>Text your friends the nearest address to your current location.</p>
           <p>No one else has to download the app.</p>
@@ -39,33 +41,45 @@
 
       <section class="module parallax parallax-2">
         <div class="container">
-          <h1>Rise</h1>
+          <h1></h1>
         </div>
       </section>
 
       <section class="module content">
         <div class="container">
-          <h2>Lorem Ipsum Dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem atque sed neque voluptates, molestias dolor enim!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas omnis odit, quaerat natus nam excepturi corporis!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora quidem neque sapiente modi?</p>
+          <h2>Send Distress Messages</h2>
+          <img class="center-image" 
+              alt="Send emergency messages from your Android device." 
+              src="img/wireframe/emergency_activity_on_htcone.png" />
+          <div class="spacer-l"></div>
+          <p>Quickly share your location with 911.</p>
+          <p>Manage an emergency contacts list to notify at the same time.</p>
+          <p>No one else has to download the app.</p>
         </div>
       </section>
 
-      <section class="module parallax parallax-3">
-        <div class="container">
-          <h1>Calm</h1>
+      <div class="header-unit">
+        <div id="parallax-video">
+          <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+          <video autoplay loop poster="img/wireframe/emergency_activity_on_htcone.png" class="fillWidth">
+            <source src="vid/IF-4.mp4" type="video/mp4" />
+            <source src="vid/IF-4.webm" type="video/webm" />
+          </video>
         </div>
-      </section>
+      </div>
+      <div class="container">
+        <h1></h1>
+      </div>
 
       <section class="module content">
         <div class="container">
-          <h2>Lorem Ipsum Dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil consequuntur, nesciunt dicta, esse rem ducimus itaque quis. Adipisci ullam nam qui illum debitis sit ad in delectus, repudiandae non dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis, facere aliquid itaque tempore consequatur nihil sint enim aliquam id saepe magnam totam repellat placeat a fugit nulla molestias voluptas.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta cum distinctio eum asperiores rem enim fugit eaque voluptas est laboriosam in repudiandae architecto placeat, illum atque quasi explicabo, culpa, molestias!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptas, aperiam quae provident, recusandae rem quis. Ut quaerat, quasi iste voluptate et dolorem atque sed neque voluptates, molestias dolor enim!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam odit tempore, quibusdam impedit deserunt. Natus quisquam, facilis numquam, molestias nesciunt modi, at debitis maxime sunt et quo quas labore perferendis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde delectus laborum doloremque recusandae, debitis maxime a! Nihil distinctio ex, cumque tempore ea voluptas omnis odit, quaerat natus nam excepturi corporis!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque eius harum atque unde nihil aut quam provident sunt, iste error vitae suscipit dolores cupiditate totam, eum quae alias! Dicta, nisi.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate beatae impedit officia quis odit rerum sequi, explicabo commodi illum suscipit, tempore eum doloremque quae obcaecati tempora quidem neque sapiente modi?</p>
+          <h2>Download Now</h2>
+          <a href="#">
+            <img class="fit-parent" alt="Visit the Google Play store." 
+                src="http://upload.wikimedia.org/wikipedia/en/7/77/Android-app-on-google-play.svg" />
+          </a>
+          <div class="spacer-l"></div>
+          <p>If you are using an Android device visit the Google Play store to downloand and start using the app today.</p>
         </div>
       </section>
 
@@ -73,56 +87,19 @@
 
   <footer>
     <div class="container">
-      <div class="asides clearfix">
-        <aside>
-          <nav>
-            <ul>
-              <li><a href="http://callmenick.com/">Welcome</a></li>
-              <li><a href="http://callmenick.com/category/tutorials">Tutorials</a></li>
-              <li><a href="http://callmenick.com/category/snippets">Snippets</a></li>
-              <li><a href="http://callmenick.com/category/articles">Articles</a></li>
-              <li><a href="http://callmenick.com/category/resources">Resources</a></li>
-            </ul>
-          </nav>
-        </aside>
-        <aside>
-          <nav>
-            <ul>
-              <li><a href="http://callmenick.com/archive/">Archive</a></li>
-              <li><a href="http://callmenick.com/about">About</a></li>
-              <li><a href="http://callmenick.com/contact">Contact</a></li>
-              <li><a href="http://callmenick.com/subscribe">Subscribe</a></li>
-            </ul>
-          </nav>
-        </aside>
-        <aside class="logo">
-          <a href="http://callmenick.com/"><img alt="Tutorials, Snippets, Resources, and Articles for Web Design and Web Development" onerror="this.src=logo.png" src="img/core/logo.svg"></a>
-        </aside>
-      </div>
+      <p class="footertext center-text">
+      GeoBeacon was created by Katie Ensign, Jared Hettinger, and Jeff Li.
+      </p>
+      <div class="spacer-l"></div>
       <div class="copyright">
-        <small>
-          &copy; 2014, Nick Salloum<br><a href="http://callmenick.com">callmenick.com</a>
-        </small>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+          <img alt="Creative Commons License" style="border-width:0" 
+              src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+          </a>
       </div>
     </div>
-  </footer><!-- /footer -->
-  
-</div><!-- /#wrapper -->
-
-<!-- ads -->
-<script src="js/fusionad.js"></script>
-
-<!-- analytics -->
-<script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-34160351-1']);
-_gaq.push(['_trackPageview']);
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script>
+  </footer>
+</div>
 
 </body>
 </html>
