added favicon, added new screnshots to the site

--- a/website/GeoBeacon/index.html
+++ b/website/GeoBeacon/index.html
@@ -4,6 +4,8 @@
 <head>
   <!-- title and meta -->
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="favicon.png" />
+
 
   <title>GeoBeacon</title>
 
@@ -12,9 +14,6 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/geostyle.css">
-
-  <!-- js -->
-  <script src="js/modernizr.js"></script>
 </head>
 
 <body>
@@ -28,10 +27,14 @@
       </section>
 
       <section class="module content">
-        <div class="container">
+        <div class="container center-text">
           <h2>Never Get Stranded Again</h2>
-          <img class="center-image" alt="Navigate the main page of GeoBeacon."
-              src="img/wireframe/main_activity_on_htcone.png" />
+          <img class="inline-image" alt="Navigate the main page of GeoBeacon."
+              src="img/wireframe/main_activity.png" />
+          <img class="inline-image" alt="Click to share your location with a friend."
+              src="img/wireframe/share_my_location.png" />
+          <img class="inline-image" alt="Select which contacts to message."
+              src="img/wireframe/select_contacts.png" />
           <div class="spacer-l"></div>
           <p>GeoBeacon enables quick and simple location sharing.</p>
           <p>Text your friends the nearest address to your current location.</p>
@@ -46,15 +49,17 @@
       </section>
 
       <section class="module content">
-        <div class="container">
-          <h2>Send Distress Messages</h2>
-          <img class="center-image" 
-              alt="Send emergency messages from your Android device." 
-              src="img/wireframe/emergency_activity_on_htcone.png" />
+        <div class="container center-text">
+          <h2>Send Emergency Texts</h2>
+          <img class="inline-image" alt="Send emergency messages from your Android device." 
+              src="img/wireframe/emergency_activity.png" />
+          <img class="inline-image" alt="Send emergency messages from your Android device." 
+              src="img/wireframe/gesture_confirmation.png" />
           <div class="spacer-l"></div>
           <p>Quickly share your location with 911.</p>
           <p>Manage an emergency contacts list to notify at the same time.</p>
-          <p>No one else has to download the app.</p>
+          <p>Don't waste time typing out information in an emergency.</p>
+          <p>A gesture confirmation screen prevents you from texting false alamrs.</p>
         </div>
       </section>
 
@@ -73,17 +78,18 @@
 
       <section class="module content">
         <div class="container">
-          <h2>Download Now</h2>
-          <a href="#">
+          <h2>Coming Soon</h2>
+          <a href="https://play.google.com/">
             <img class="fit-parent" alt="Visit the Google Play store." 
+                href="https://play.google.com/" 
                 src="http://upload.wikimedia.org/wikipedia/en/7/77/Android-app-on-google-play.svg" />
           </a>
           <div class="spacer-l"></div>
-          <p>If you are using an Android device visit the Google Play store to downloand and start using the app today.</p>
+          <p>If you are using an Android device you will be able to visit the Google Play store and download GeoBeacon within a month.</p>
         </div>
       </section>
 
-  </main><!-- /main -->
+  </main>
 
   <footer>
     <div class="container">
